3/2/12 use transmittance (T) in model, convert to percent transmittance (%T) in view
3/2/12 bug fix: concentration slider doesn't show correct initial non-zero value
3/1/12 Beers: make AT detector non movable
3/1/12 Beers: start with 100 units of concentration for each solution
3/1/12 static methods for A and %T models
3/1/12 make sensor diameter an attribute of the detector probe
# 0.00.14 (62016) Feb 29, 2012
2/28/12 add stub for photon view
2/28/12 add clock to Beers model, in preparation for animating photons
2/28/12 move LightRepresentation property to view
2/28/12 fix rendering order so that behavior looks plausible when probe is close to light
2/28/12 display correct value on AT detector based on its location
2/28/12 update beam only when it's visible
2/28/12 major simplification of BeamNode
2/28/12 add model of light beam, detect interaction with detector probe
2/28/12 change drag bounds of ruler so that it can't get lost behind control panel
# 0.00.13 (61715) Feb 23, 2012
2/23/12 Beers: resize cuvette only using arrow (event handlers were attache to the wrong node)
2/23/12 Concentration: replace various getters with public final fields in model classes
2/23/12 Concentration: verified that this sim is fully instrumented for data collection
2/23/12 Concentration: add non-interactive simsharing message for solution
2/23/12 Concentration: screenshot
2/23/12 reduce cuvette stroke width from 2 to 1.5 so it doesn't look so heavy
2/23/12 increase font size on ruler
2/23/12 Beers: increase vertical space for radio buttons in AT body (increase height of image files)
2/23/12 fix transparency at corners of meter body images
2/23/12 revised model.txt with JC's contributions
2/23/12 Beers: reset all solutions on Reset All
2/23/12 Concentration: fix for: make shaker empty, then drain out a little bit of solution, one grain of solute comes out of the shaker while activating the drain
2/23/12 Beers: setOpaque(false) for radio buttons