@@ -15,12 +15,8 @@ import edu.colorado.phet.beerslawlab.beerslaw.model.BeersLawSolution.PotassiumPe
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.model.clock.IClock;
-import edu.colorado.phet.common.phetcommon.model.property.ChangeObserver;
-import edu.colorado.phet.common.phetcommon.model.property.CompositeProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.DoubleRange;
-import edu.colorado.phet.common.phetcommon.util.function.Function0;
-import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.umd.cs.piccolo.util.PBounds;
 
@@ -39,15 +35,8 @@ public class BeersLawModel implements Resettable {
     public final Cuvette cuvette;
     public final ATDetector detector;
     public final Ruler ruler;
-
-    // Absorbance model
-    private final CompositeProperty<Double> absorbance; // A=abC
-    private final CompositeProperty<Double> molarAbsorptivity; // a
-    private final CompositeProperty<Double> pathLength; // b
-    private final Property<Double> concentration; // C
-
-    // Transmittance model
-    private final CompositeProperty<Double> transmittance; // 1=fully transmitted, 0=fully absorbed
+    public final Absorbance absorbance;
+    public final Transmittance transmittance;
 
     public BeersLawModel( IClock clock ) {
 
@@ -67,85 +56,23 @@ public class BeersLawModel implements Resettable {
         }};
         this.solution = new Property<BeersLawSolution>( solutions.get( 0 ) );
 
+        //TODO compute drag bounds to match the stage size
+        this.ruler = new Ruler( 2, 0.35, new ImmutableVector2D( 3, 4.9 ), new PBounds( 0, 1, 8, 4.5 ) );
+
         this.light = new Light( new ImmutableVector2D( 1.5, 2.2 ), false, 0.45, solution );
 
         this.cuvette = new Cuvette( new ImmutableVector2D( light.location.getX() + 1.5, 1.25 ), 1.0, 2.75, new DoubleRange( 0.5, 2.0 ) );
 
-        //TODO this is too complicated
-        // absorbance model
-        {
-            // a: molar absorptivity, units=1/(cm*M)
-            this.molarAbsorptivity = new CompositeProperty<Double>( new Function0<Double>() {
-                public Double apply() {
-                    return solution.get().molarAbsorptionMax;
-                }
-            }, solution );
+        this.absorbance = new Absorbance( solution, cuvette );
 
-            // b: path length, synonymous with cuvette width, units=cm
-            this.pathLength = new CompositeProperty<Double>( new Function0<Double>() {
-                public Double apply() {
-                    return cuvette.width.get();
-                }
-            }, cuvette.width );
-
-            // C: concentration, units=M
-            {
-                this.concentration = new Property<Double>( solution.get().concentration.get() );
-
-                // This will be attached to the concentration property of the current solution.
-                final VoidFunction1<Double> concentrationObserver = new VoidFunction1<Double>() {
-                    public void apply( Double concentration ) {
-                        BeersLawModel.this.concentration.set( concentration );
-                    }
-                };
-
-                // Rewire the concentration observer when the solution changes.
-                ChangeObserver<BeersLawSolution> solutionObserver = new ChangeObserver<BeersLawSolution>() {
-                    public void update( BeersLawSolution newValue, BeersLawSolution oldValue ) {
-                        if ( oldValue != null ) {
-                            oldValue.concentration.removeObserver( concentrationObserver );
-                        }
-                        newValue.concentration.addObserver( concentrationObserver );
-                    }
-                };
-                solution.addObserver( solutionObserver );
-                solutionObserver.update( solution.get(), null ); // because ChangeObserver.update is not called on registration
-            }
-
-            // compute absorbance
-            this.absorbance = new CompositeProperty<Double>( new Function0<Double>() {
-                public Double apply() {
-                    return getAbsorbance( molarAbsorptivity.get(), pathLength.get(), concentration.get() );
-                }
-            }, molarAbsorptivity, pathLength, concentration );
-        }
-
-        // transmittance model
-        transmittance = new CompositeProperty<Double>( new Function0<Double>() {
-            public Double apply() {
-                return getTransmittance( absorbance.get() );
-            }
-        }, absorbance );
+        this.transmittance = new Transmittance( absorbance );
 
         //TODO compute drag bounds to match the stage size
         this.detector = new ATDetector( new ImmutableVector2D( 6, 3.70 ), new PBounds( 0, 0, 7.9, 5.25 ),
                                         new ImmutableVector2D( 6, light.location.getY() ), new PBounds( 0, 0, 7.9, 5.25 ),
                                         light, cuvette, absorbance, transmittance );
 
-        //TODO compute drag bounds to match the stage size
-        this.ruler = new Ruler( 2, 0.35, new ImmutableVector2D( 3, 4.9 ), new PBounds( 0, 1, 8, 4.5 ) );
-
         this.beam = new Beam( light, cuvette, detector, transmittance, mvt );
-    }
-
-    // General model of absorbance (A = abC)
-    public static double getAbsorbance( double molarAbsorptivity, double pathLength, double concentration ) {
-        return molarAbsorptivity * pathLength * concentration;
-    }
-
-    // General model of transmittance (T = 10^A)
-    public static double getTransmittance( double absorbance ) {
-        return Math.pow( 10, -absorbance );
     }
 
     public void reset() {
