@@ -1,3 +1,4 @@
+3/2/12 factor out model classes for A and T
 3/2/12 use transmittance (T) in model, convert to percent transmittance (%T) in view
 3/2/12 bug fix: concentration slider doesn't show correct initial non-zero value
 3/1/12 Beers: make AT detector non movable
